# Detic

./: pyproject.toml
