[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Detic"
version = "0.1.0"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = []

[build-system]
requires = ["setuptools", "wheel", "torch>=1.8.0"]
build-backend = "setuptools.build_meta:__legacy__"
